# 2026_cellpose_mem

./: README.md  cellpose_ratio_feature.patch  pyproject.toml
cellpose_tools/: __init__.py  cli.py  core.py
cellpose_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_smoke.py
tests/example/: analyze_ratio_average.py  cellpose_cmd.docx
